--- a/ChatWeb/styles.css
+++ b/ChatWeb/styles.css
@@ -47,3 +47,16 @@ textarea{
 img{
     margin: 10px 10px 10px 10px;
 }
+a{
+    color: red;
+    text-decoration: none;
+}
+.circle{
+    float: left;
+    width: 40px;
+    height: 40px;
+    background: #cc0000;
+    -moz-border-radius: 50px;
+    -webkit-border-radius: 50px;
+    border-radius: 50px;
+}
